<resources>
    <string name="app_name">Location Reminder</string>
    <string name="title">Reminders</string>
    <string name="reminder_title">TITLE</string>
    <string name="reminder_description">Description</string>
    <string name="reminder_location">Location</string>
    <string name="reminder_save">Save</string>
    <string name="reminder_delete">Delete</string>
    <string name="location_hint">Select a Location</string>
    <string name="not_enabled_location_title">LOCATION SETTINGS</string>
    <string name="not_enabled_location_message">Location is not enabled. Do you want to go to the settings menu?</string>
    <string name="no_permission_location_error">NO PERMISSION TO USE LOCATION</string>
    <string name="no_permission_error">NO PERMISSION TO USE </string>
    <string name="no_permission_error_and"> AND </string>
    <string name="ACCESS_FINE_LOCATION">LOCATION</string>
    <string name="ACCESS_NETWORK_STATE">NETWORK STATE</string>
    <string name="INTERNET">INTERNET</string>
    <string name="field_required_error_message" >This field is required</string>
</resources>
